--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,19 @@ body {
   background-color: #276D9B;
 }
 
-/* main {
-  position: relative;
-} */
+input {
+  width: 100%;
+  font-size: 1.5em;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: 'Amatic SC', cursive;
+}
 
 p {
   font-size: 2.5em;
   line-height: 2em;
-  height: 4em;
+  height: 3.5em;
   overflow: hidden;
   font-family: 'Amatic SC', cursive;
   text-align: center;
@@ -41,7 +46,7 @@ button {
   width: 70%;
   position: absolute;
   left: 50%;
-  transform: translate(-50%, 20%);
+  transform: translate(-50%, 10%);
   background-color: #181E34;
   border: 16px solid white;
   padding: 35px;
@@ -123,7 +128,7 @@ button {
   width: 70%;
   position: absolute;
   left: 50%;
-  transform: translate(-50%, 30%);
+  transform: translate(-50%, 5%);
   padding: 15px;
 }
 }
